# InsightForge-AI

./: .gitignore  README.md  app.py  main.py  pyproject.toml
backend/: main.py
backend/database/: app.db  db.py  models.py
backend/routes/: ai_routes.py  analytics_routes.py  upload_routes.py
backend/services/: ai_service.py  chart_service.py  file_service.py  insight_service.py  kpi_service.py  schema_service.py
frontend/: app.py
frontend/components/: sidebar.py
frontend/screens/: dashboard_screen.py  home_screen.py  insight_screen.py  upload_screen.py
frontend/services/: api_client.py
utils/: ai_engine.py  chart_generator.py  file_handler.py  insight_engine.py  kpi_engine.py  schema_detector.py
