[project]
name = "new-project-pdf-to-bi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "ollama>=0.6.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "python-multipart>=0.0.29",
    "requests>=2.34.2",
    "streamlit>=1.57.0",
    "uvicorn>=0.47.0",
]
